Added support for database.
